<resources>
    <string name="app_name">测流</string>
    <!--    关于-->
    <string name="app_about_name">关于测流APP</string>
    <string name="version_number">V1.9.1</string>
    <string name="Check_for_updates">检查更新</string>
    <string name="update_record">更新记录</string>
    <string name="about">关于</string>
    <string name="and">和</string>
    <string name="User_Agreement">用户协议</string>
    <string name="Privacy_agreement">隐私协议</string>
    <string name="settings">设置</string>
    <!--    测量记录-->
    <string name="Measurement">测量1</string>
    <string name="Average_velocity">平均流速</string>
    <string name="Measurement_record">测量记录</string>

    <!--    首页-->
    <string name="tv_hand_movement">手动测量</string>
    <string name="tv_voluntarily">航线测量</string>
    <string name="tv_status">设备未连接</string>
    <!--    航线库-->
    <string name="Route_library">航线库</string>
    <!--    修改水位-->
    <string name="water_level">请输入水位</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="Measurement_name">测量名称</string>
    <string name="Measurement_time">测量时间</string>
    <string name="flow">测量</string>
    <string name="Hover_time">悬停时间</string>
    <string name="Hover_height">悬停高度</string>
    <string name="Hover_heading">悬停朝向</string>
    <string name="Hover_left">航线左侧</string>
    <string name="Hover_right">航线右侧</string>
    <string name="Route_name">航线名称</string>
    <string name="Interval_setting">间隔设置</string>
    <string name="Longitude_of_origin">起点经度</string>
    <string name="Latitude_of_origin">起点纬度</string>
    <string name="End_longitude">终点经度</string>
    <string name="End_latitude">终点纬度</string>
    <string name="next">下一步</string>
    <string name="Create_route">创建航线</string>
    <string name="unopen">暂未开放</string>
    <string name="is_new_ver">当前已是最新版本</string>
    <string name="currently_the_latest_version">当前已是最新版本</string>
    <string name="data_is_complete">请确认输入数据是否完整</string>
    <string name="insufficient_current_permissions">当前权限不足,谢谢！</string>
    <string name="save">保存成功</string>
    <string name="modified">修改成功</string>
    <string name="have_input">已导入断面</string>
    <string name="pls_input_start">请先在地图上绘制起点坐标或输入起点纬度</string>
    <string name="again">请再次点击在地图上绘制终点</string>
    <string name="mark_start">请重新绘制起点</string>
    <string name="mark_end">请重新绘制终点</string>
    <string name="ethover_height">悬停高度请设置-200至500之间</string>
    <string name="time">悬停时间请设置20至60之间</string>
    <string name="location_error">定位失败</string>
    <string name="check_location">请检查是否开启定位服务?</string>
    <string name="turn_on">立即开启</string>
    <string name="no_open">定位未打开，无法获取当前位置！</string>
    <string name="loading">初始化中</string>
    <string name="exit_again">再按一次退出程序</string>
    <string name="check_remove">请确认是否删除该条数据?</string>
    <string name="yes">确认</string>
    <string name="success_remove">删除成功</string>
    <string name="check_cancel">你点击了取消</string>
    <string name="check_yes">你点击了确定,输入的值为:</string>
    <string name="modify">修改</string>
    <string name="Import_section_data">导入断面数据</string>
    <string name="Insufficient_current_permissions">当前权限不足,谢谢！</string>
    <string name="Modify_the_water_level">修改水位</string>
    <string name="close">关闭</string>
    <string name="have">已保存至</string>
    <string name="repaint_first">是否要重新绘制起点</string>
    <string name="repaint_end">是否要重新绘制终点</string>


</resources>