<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6D6D6"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="#3A3A3A">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x20"
            android:src="@mipmap/back">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_about_name"
            android:textColor="#ffffff"
            android:textSize="17sp">

        </TextView>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/x75"
            android:layout_height="@dimen/y75"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_app_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y5"
            android:text="@string/version_number"
            android:textColor="#000000"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y1"
            android:layout_marginTop="@dimen/y20"
            android:background="#AE9A9A" />

        <RelativeLayout
            android:id="@+id/updates"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y60">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x30"
                android:text="@string/Check_for_updates"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="@dimen/x20"
                android:layout_height="@dimen/y20"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/y20"
                android:src="@mipmap/right" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#AE9A9A" />

        <RelativeLayout
            android:id="@+id/recording"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y60">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x30"
                android:text="@string/update_record"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="@dimen/x20"
                android:layout_height="@dimen/x20"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/x20"
                android:src="@mipmap/right" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y1"
            android:background="#AE9A9A" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/y10"
            android:text="@string/and"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/userAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/x5"
            android:layout_marginBottom="@dimen/y10"
            android:layout_toLeftOf="@+id/and"
            android:text="@string/Privacy_agreement"
            android:textColor="#00BCD4"/>

        <TextView
            android:id="@+id/privacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/x5"
            android:layout_marginBottom="@dimen/y10"
            android:layout_toRightOf="@+id/and"
            android:text="@string/User_Agreement"
            android:textColor="#00BCD4"/>
    </RelativeLayout>


</LinearLayout>