<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_save_data_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/Hover_time"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <SeekBar
                android:id="@+id/sb_Hover_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:max="60"
                android:min="20"
                android:layout_toLeftOf="@+id/et_hover_time"
                android:progress="30" />

            <com.yangyang.unmanneddrone.view.LastInputEditText
                android:id="@+id/et_hover_time"
                android:layout_width="40dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/edit_background"
                android:gravity="center"
                android:inputType="number" />
        </RelativeLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#404040" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/Hover_height"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <SeekBar
                android:min="-200"
                android:max="500"
                android:id="@+id/sb_Hover_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/et_hover_height"
                android:progress="50" />

            <com.yangyang.unmanneddrone.view.LastInputEditText
                android:id="@+id/et_hover_height"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_background"
                android:gravity="center"
                android:inputType="number" />
        </RelativeLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#404040" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/Hover_heading"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RadioGroup
                android:id="@+id/hover_direction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/cb_left"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_background"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="3dp"
                    android:checked="true"
                    android:text="@string/Hover_left" />

                <RadioButton
                    android:id="@+id/cb_right"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toRightOf="@+id/cb_left"
                    android:background="@drawable/edit_background"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="3dp"
                    android:text="@string/Hover_right" />
            </RadioGroup>


        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#404040" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <ImageView
            android:id="@+id/excel"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/button_Import_data"
            android:src="@drawable/ic_excel"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_Import_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_background"
            android:paddingHorizontal="10dp"
            android:text="@string/Import_section_data" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>