<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_pull"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/ll_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y15"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="@dimen/x25"
            android:layout_height="@dimen/y25"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/x20"
            android:src="@mipmap/location" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/y15"
            android:layout_toRightOf="@+id/iv_location"
            android:gravity="center_vertical"
            android:text="@string/Measurement_record"
            android:textColor="#363636"
            android:textSize="16sp" />

    </RelativeLayout>


    <RelativeLayout

        android:id="@+id/ll_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y20"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_about"
            android:layout_width="@dimen/x25"
            android:layout_height="@dimen/y25"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x20"
            android:src="@mipmap/about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x15"
            android:layout_toRightOf="@+id/iv_about"
            android:gravity="center_vertical"
            android:text="@string/about"
            android:textColor="#363636"
            android:textSize="16sp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/ll_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y20"
        android:layout_marginBottom="@dimen/y20"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_setting"
            android:layout_width="@dimen/x25"
            android:layout_height="@dimen/y25"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x20"
            android:src="@mipmap/setting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x15"
            android:layout_toRightOf="@+id/iv_setting"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="#363636"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>