<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_input_data_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/x30"
                android:layout_marginRight="@dimen/x15"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/Route_name"
                android:textColor="#ffffff"
                android:textSize="12sp">

            </TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/x30"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/Interval_setting"
                android:textColor="#ffffff"
                android:textSize="12sp">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/y5"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_title"
                android:layout_width="0dp"
                android:imeOptions="actionDone"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/x30"
                android:layout_marginRight="@dimen/x15"
                android:layout_marginBottom="@dimen/y5"
                android:layout_toLeftOf="@+id/interval"
                android:layout_weight="2"
                android:background="@drawable/edit_background"
                android:maxLines="1"
                android:paddingLeft="@dimen/x10"
                android:paddingRight="@dimen/x10"
                android:textColor="#03A9F4"
                android:textSize="11sp">

            </EditText>

            <EditText
                android:id="@+id/interval"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/x30"
                android:imeOptions="actionDone"
                android:layout_marginBottom="@dimen/y10"
                android:layout_toRightOf="@+id/et_title"
                android:layout_weight="1"
                android:background="@drawable/edit_background"
                android:inputType="number"
                android:paddingLeft="@dimen/x15"
                android:paddingRight="@dimen/x10"
                android:textColor="#03A9F4"
                android:textSize="10sp" />


        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y2"
        android:background="#404040" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_start_Latitude"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/x30"
                android:layout_marginTop="@dimen/x10"
                android:layout_weight="1"
                android:text="@string/Longitude_of_origin"
                android:textColor="#ffffff"
                android:textSize="15sp">

            </TextView>

            <EditText
                android:id="@+id/et_start_Latitude"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/x30"
                android:layout_marginTop="@dimen/y5"
                android:layout_marginRight="@dimen/x20"
                android:layout_marginBottom="@dimen/y10"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:background="@drawable/edit_background"
                android:inputType="numberDecimal"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingLeft="@dimen/x10"
                android:paddingRight="@dimen/x10"
                android:singleLine="true"
                android:textColor="#03A9F4"
                android:textSize="11sp">

            </EditText>

            <TextView
                android:id="@+id/tv_start_Longitude"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/x30"
                android:layout_marginTop="@dimen/y10"
                android:layout_weight="1"
                android:text="@string/Latitude_of_origin"
                android:textColor="#ffffff"
                android:textSize="15sp">

            </TextView>

            <EditText
                android:id="@+id/et_start_Longitude"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/x30"
                android:layout_marginTop="@dimen/y5"
                android:layout_marginRight="@dimen/x20"
                android:layout_marginBottom="@dimen/y10"
                android:layout_weight="1"
                android:background="@drawable/edit_background"
                android:inputType="numberDecimal"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingLeft="@dimen/x10"
                android:imeOptions="actionDone"
                android:paddingRight="@dimen/x10"
                android:singleLine="true"
                android:textColor="#03A9F4"
                android:textSize="11sp">

            </EditText>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.yangyang.unmanneddrone.view.RoundMenuView
                android:id="@+id/roundView_one"
                android:layout_width="@dimen/x140"
                android:layout_height="@dimen/y140"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y2"
        android:background="#404040" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_end_Latitude"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/x30"
                android:layout_marginTop="@dimen/y10"
                android:layout_weight="1"
                android:text="@string/End_longitude"
                android:textColor="#ffffff"
                android:textSize="15sp">

            </TextView>

            <EditText
                android:id="@+id/et_end_Latitude"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/x30"
                android:layout_marginTop="@dimen/y5"
                android:layout_marginRight="@dimen/x20"
                android:layout_marginBottom="@dimen/y10"
                android:layout_weight="1"
                android:background="@drawable/edit_background"
                android:inputType="numberDecimal"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingLeft="@dimen/x10"
                android:imeOptions="actionDone"
                android:paddingRight="@dimen/x10"
                android:singleLine="true"
                android:textColor="#03A9F4"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_end_Longitude"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/x30"
                android:layout_marginTop="@dimen/y10"
                android:layout_weight="1"
                android:text="@string/End_latitude"
                android:textColor="#ffffff"
                android:textSize="15sp">

            </TextView>

            <EditText
                android:id="@+id/et_end_Longitude"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/x30"
                android:layout_marginTop="@dimen/y5"
                android:layout_marginRight="@dimen/x20"
                android:layout_marginBottom="@dimen/y10"
                android:layout_weight="1"
                android:background="@drawable/edit_background"
                android:inputType="numberDecimal"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingLeft="@dimen/x10"
                android:imeOptions="actionDone"
                android:paddingRight="@dimen/x10"
                android:singleLine="true"
                android:textColor="#03A9F4"
                android:textSize="11sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.yangyang.unmanneddrone.view.RoundMenuView
                android:id="@+id/roundView_two"
                android:layout_width="@dimen/x140"
                android:layout_height="@dimen/y140"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y2"
        android:background="#404040" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#2196F3"
        android:text="@string/next"
        android:textSize="15sp">

    </androidx.appcompat.widget.AppCompatButton>

</LinearLayout>